@@ -28,6 +28,8 @@ TODO :
 	all : renamed haxe.Http.request to "requestUrl"
 	all : renamed neko.zip.Compress/Uncompress.run to "execute"
 	spod : fix very rare issue with relations and transactions
+	compiler : added TClosure - optimize closure creation and ease code generation
+	cpp : added CPP platform
 
 2009-03-22: 2.03
 	optimized Type.enumEq : use index instead of tag comparison for neko/flash9/php
